--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -51,6 +51,7 @@ set(PROJECT_SRC
         Multiway_Merger.cpp
         Discontinuity_Graph_Bootstrap.cpp
         Edge_Matrix.cpp
+        Discontinuity_Graph_Contractor.cpp
         commands.cpp
     )
 
