--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -108,6 +108,9 @@ target_link_libraries(cfcore_static PRIVATE ZLIB::ZLIB)
 # Link the cfcore_static library ti the `bzip2` library.
 target_link_libraries(cfcore_static PRIVATE BZip2::BZip2)
 
+# Link the cfcore_static library to the `zstd` library.
+target_link_libraries(cfcore_static PRIVATE zstd)
+
 # Link the cfcore_static library to the threads package in the platform.
 target_link_libraries(cfcore_static PRIVATE ${CMAKE_THREAD_LIBS_INIT})
 
