--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -110,6 +110,12 @@ if(ASAN)
     target_link_libraries(cfcore_static PRIVATE ${ASAN_LINK_FLAGS} ${ASAN_FLAGS})
 endif()
 
+if(MSAN)
+    target_compile_options(cfcore_static PRIVATE "$<$<CONFIG:DEBUG>:${MSAN_FLAGS}>" "$<$<CONFIG:DEBUG>:${DEBUG_FLAGS}>")
+    target_compile_options(cfcore_static PRIVATE "$<$<CONFIG:RELEASE>:${MSAN_FLAGS}>" "$<$<CONFIG:RELEASE>:${DEBUG_FLAGS}>")
+    target_link_libraries(cfcore_static PRIVATE ${MSAN_LINK_FLAGS} ${MSAN_FLAGS})
+endif()
+
 if(UBSAN)
     target_compile_options(cfcore_static PRIVATE "$<$<CONFIG:DEBUG>:${UBSAN_FLAGS}>")
     target_compile_options(cfcore_static PRIVATE "$<$<CONFIG:RELEASE>:${UBSAN_FLAGS}>")
@@ -186,6 +192,12 @@ if(ASAN)
     target_link_libraries(${PROJECT_NAME} PRIVATE ${ASAN_LINK_FLAGS} ${ASAN_FLAGS})
 endif()
 
+if(MSAN)
+    target_compile_options(${PROJECT_NAME} PRIVATE "$<$<CONFIG:DEBUG>:${MSAN_FLAGS}>" "$<$<CONFIG:DEBUG>:${DEBUG_FLAGS}>")
+    target_compile_options(${PROJECT_NAME} PRIVATE "$<$<CONFIG:RELEASE>:${MSAN_FLAGS}>" "$<$<CONFIG:RELEASE>:${DEBUG_FLAGS}>")
+    target_link_libraries(${PROJECT_NAME} PRIVATE ${MSAN_LINK_FLAGS} ${MSAN_FLAGS})
+endif()
+
 if(UBSAN)
     target_compile_options(${PROJECT_NAME} PRIVATE "$<$<CONFIG:DEBUG>:${UBSAN_FLAGS}>")
     target_compile_options(${PROJECT_NAME} PRIVATE "$<$<CONFIG:RELEASE>:${UBSAN_FLAGS}>")
@@ -231,6 +243,12 @@ if(ASAN)
     target_compile_options(test PRIVATE "$<$<CONFIG:DEBUG>:${ASAN_FLAGS}>" "$<$<CONFIG:DEBUG>:${DEBUG_FLAGS}>")
     target_compile_options(test PRIVATE "$<$<CONFIG:RELEASE>:${ASAN_FLAGS}>" "$<$<CONFIG:RELEASE>:${DEBUG_FLAGS}>")
     target_link_libraries(test PRIVATE ${ASAN_LINK_FLAGS} ${ASAN_FLAGS})
+endif()
+
+if(MSAN)
+    target_compile_options(test PRIVATE "$<$<CONFIG:DEBUG>:${MSAN_FLAGS}>" "$<$<CONFIG:DEBUG>:${DEBUG_FLAGS}>")
+    target_compile_options(test PRIVATE "$<$<CONFIG:RELEASE>:${MSAN_FLAGS}>" "$<$<CONFIG:RELEASE>:${DEBUG_FLAGS}>")
+    target_link_libraries(test PRIVATE ${MSAN_LINK_FLAGS} ${MSAN_FLAGS})
 endif()
 
 if(UBSAN)
